Fix broken CSS merge

--- a/controller/web/css/style.css
+++ b/controller/web/css/style.css
@@ -540,7 +540,16 @@ dt, dd {
   color: #4a4545;
 }
 
-<<<<<<< HEAD
+.resource-info h4 {
+  display: inline;
+}
+.resource-info .indicators-summary-users .resource-ready {
+  color: #4a4545;
+}
+.resource-info .indicators-summary-users .resource-missing {
+  color: #a30006;
+}
+
 #course-form #course-form-title {
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
@@ -635,16 +644,6 @@ dt, dd {
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
   border: 1px solid #cec120;
   border-bottom: 1px solid #a29719;
-=======
-.resource-info h4 {
-  display: inline;
-}
-.resource-info .indicators-summary-users .resource-ready {
-  color: #4a4545;
-}
-.resource-info .indicators-summary-users .resource-missing {
-  color: #a30006;
->>>>>>> master
 }
 
 @media print {
